feat: 채팅방별로 대화하는 기능 추가

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,13 +22,21 @@
                     <button id="disconnect" class="btn btn-default" type="submit" disabled="disabled">Disconnect
                     </button>
                 </div>
+                <div class="form-group">
+                    <label for="roomId">What is your room id?</label>
+                    <input type="text" id="roomId" class="form-control" placeholder="Your room id here...">
+                </div>
             </form>
         </div>
         <div class="col-md-6">
             <form class="form-inline">
                 <div class="form-group">
-                    <label for="name">What is your name?</label>
-                    <input type="text" id="name" class="form-control" placeholder="Your name here...">
+                    <label for="username">What is your username?</label>
+                    <input type="text" id="username" class="form-control" placeholder="Your username here...">
+                </div>
+                <div class="form-group">
+                    <label for="message">What is message?</label>
+                    <input type="text" id="message" class="form-control" placeholder="Your message here...">
                 </div>
                 <button id="send" class="btn btn-default" type="submit">Send</button>
             </form>
